# device_profile_core

./: README.en.md  README.md  bundle.json  ohos.build
common/include/: device_profile_errors.h  device_profile_log.h  device_profile_utils.h
common/src/: device_profile_utils.cpp
interfaces/innerkits/core/: BUILD.gn
interfaces/innerkits/core/include/: distributed_device_profile_client.h  distributed_device_profile_proxy.h  idistributed_device_profile.h  iprofile_event_callback.h  profile_change_notification.h  profile_event_notifier_stub.h  sync_options.h
interfaces/innerkits/core/src/: distributed_device_profile_client.cpp  distributed_device_profile_proxy.cpp  profile_event_notifier_stub.cpp
sa_profile/: BUILD.gn
services/core/: BUILD.gn
services/core/include/: distributed_device_profile_service.h  distributed_device_profile_stub.h
services/core/include/authority/: trust_group_manager.h
services/core/include/contentsensor/: content_collector.h  device_info_collector.h  system_info_collector.h
services/core/include/dbstorage/: device_profile_storage.h  device_profile_storage_manager.h  online_sync_table.h
services/core/include/devicemanager/: device_manager.h
services/core/include/dfx/: dp_hisysevent_report.h  dp_hitrace_report.h
services/core/include/subscribemanager/: profile_change_handler.h  profile_event_handler.h
services/core/src/: distributed_device_profile_service.cpp  distributed_device_profile_stub.cpp  profile_change_notification.cpp  service_characteristic_profile.cpp  sync_options.cpp
services/core/src/authority/: trust_group_manager.cpp
services/core/src/contentsensor/: content_sensor_manager.cpp  (+3 more)
services/core/test/: BUILD.gn
services/core/test/fuzztest/deviceprofile_fuzzer/: BUILD.gn  device_profile_fuzzer.cpp
services/core/test/unittest/: content_sensor_test.cpp  dp_hisysevent_report.cpp  dp_hisysevent_report.h  event_subscribe_test.cpp  profile_crud_test.cpp
tools/dp/: BUILD.gn
tools/dp/src/: dp_command.cpp
(+12 files in other folders)
