# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")

module_output_path = "deviceprofile/deviceprofiletest"

device_profile_path = "//foundation/deviceprofile/device_profile_core"
device_profile_innerkits = "${device_profile_path}/interfaces/innerkits"
device_profile_service = "${device_profile_path}/services"

device_profile_configs =
    [ "${device_profile_service}/core:device_profile_core_config" ]

device_profile_deps = [
  "${device_profile_innerkits}/core:distributed_device_profile_client",
  "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
  "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
  "//utils/native/base:utils",
]

device_profile_external_deps = [
  "hiviewdfx_hilog_native:libhilog",
  "ipc:ipc_core",
]

device_profile_public_deps = [ "//third_party/googletest:gtest_main" ]

ohos_unittest("profile_crud_test") {
  module_out_path = module_output_path

  sources = [ "unittest/profile_crud_test.cpp" ]
  configs = device_profile_configs
  deps = device_profile_deps
  if (is_standard_system) {
    external_deps = device_profile_external_deps
    public_deps = device_profile_public_deps
  }
}
group("unittest") {
  testonly = true
  deps = [ ":profile_crud_test" ]
}
